updates README.md and .md

--- a/.md
+++ b/.md
@@ -1,13 +1,18 @@
-* [README.md]()
 
 * [Tetris Web Game Creation](https://chat.openai.com/c/c106ff73-94e7-4b91-85a2-2b1ef3e81f80) - [GPT-highlights](:.md)
+* [Apache2 tetris VirtualHost](https://chat.openai.com/c/171680c1-3033-434a-b1d5-ebd3bb829f91)
 
-> * [index.html]()
+# 
+
+* [README.md]()
+
+> * [index.html]() => [relluf.dev/tetris](http://:)
 * [script.js]()
 * [styles.css]()
 
 # `2023/05/25` TODOS
 
+* Install a server
 * The game should keep track of the following statistics
 	* √ Score
 	* √ Number of lines completed
