updates README.md and .md

--- a/.md
+++ b/.md
@@ -1,4 +1,5 @@
 
+* [Tetris Web Game Creation](https://chat.openai.com/share/f4af545f-77dd-403a-8504-a119deac7d1e)
 * [Tetris Web Game Creation](https://chat.openai.com/c/c106ff73-94e7-4b91-85a2-2b1ef3e81f80) - [GPT-highlights](:.md)
 * [Apache2 tetris VirtualHost](https://chat.openai.com/c/171680c1-3033-434a-b1d5-ebd3bb829f91)
 
